# x264-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: x264.yml
examples/: encode.rs
src/: lib.rs
x264-sys/: .gitignore  Cargo.toml  build.rs
x264-sys/data/: x264.h
x264-sys/src/: lib.rs
