[package]
name = "x264"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "x264 bindings"
repository = "https://github.com/rust-av/x264-rs"
readme = "README.md"
keywords = ["x264","h264"]

[dependencies]
x264-sys = { version = "0.2.0", path = "x264-sys" }

[workspace]
members = ["x264-sys"]

[[example]]
name = "encode"
path = "examples/encode.rs"

[dev-dependencies]
regex ="1.3"
