[package]
name = "x264-sys"
version = "0.2.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to x264"
repository = "https://github.com/rust-av/x264-rs"
edition = "2018"

[build-dependencies]
bindgen = "0.54"
system-deps = "1.3"

[package.metadata.system-deps]
x264 = "0.147"

[dependencies]
