[package]
name = "x264-sys"
version = "0.2.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to x264"
repository = "https://github.com/rust-av/x264-rs"
edition = "2018"

[build-dependencies]
bindgen = "0.65.1"
system-deps = "6.1.0"

[package.metadata.system-deps]
x264 = "0.147"

[dependencies]
